fixedRecordにメンバー追加
